Fixed contact page structure on mobile, added more smtp error checking, and manual email href - Fixed alignment issues on mobile - Mail server will throw an error if it's down

--- a/styles/style.css
+++ b/styles/style.css
@@ -179,6 +179,7 @@ p {
     width: 100%;
     height: 100%;
     margin-top: 5em;
+    overflow: auto;
 }
 
 .options-menu-wrapper svg {
@@ -311,6 +312,7 @@ aside ul {
     background-color: var(--bg-modal-primary);
     border-radius: 5em;
     box-shadow: 20px 15px 5px 10px rgb(0, 0, 0, 0.6);
+    overflow-y: auto;
 }
 
 .contact-form {
@@ -321,7 +323,10 @@ aside ul {
 }
 
 .contact-form-headings {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
     margin-bottom: 3em;
+    row-gap: 1em;
 }
 
 label {
@@ -372,6 +377,7 @@ button:focus {
     border-radius: 2em;
     box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6),
                 inset -2px -2px 3px rgba(0, 0, 0, 0.6);
+    cursor: pointer;
 }
 
 #submit:hover {
@@ -386,20 +392,26 @@ button:focus {
 
 #email-confirmation {
     position: fixed;
-    width: 20%;
-    height: 30%;
-    padding: 2em;
-    border-radius: 2em;
-    bottom: -40%;
+    width: 200px;
+    height: 150px;
+    padding: 20px;
+    border-radius: 50px;
+    bottom: -250px;
     right: 0;
     color: var(--font-primary);
     background: var(--bg-modal-primary);
+    margin-right: 15px;
 }
 
 
-#github-svg {
+#links {
     margin-right: auto;
 }
+
+a {
+    text-decoration: none; 
+}
+
 
 @media screen and (max-width: 600px) {
     .options-menu {
@@ -437,10 +449,28 @@ button:focus {
     li {
       font-size: 0.65em;
     }
+    
+    .contact-wrapper {
+        width: 80%;
+    }
 
     .contact-form-headings {
         display: flex;
         flex-direction: column;
+    }
+
+    #email-confirmation {
+        width: 150px;
+        height: 100px;
+        padding: 20px;
+        border-radius: 40px;
+        right: 0;
+        color: var(--font-primary);
+        background: var(--bg-modal-primary);
+    }
+
+    #links {
+        margin-top: 10px;
     }
 
 }
@@ -452,16 +482,6 @@ button:focus {
     }
     aside {
       left: 80%;
-    }
-    #links {
-      width: 100%;
-    }
-
-    .contact-form-headings {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        row-gap: 1em;
-        grid-auto-columns: minmax(300px, auto);
     }
 }
 
@@ -515,9 +535,6 @@ button:focus {
     }
     aside {
       left: 92%;
-    }
-    #links {
-      width: 70%;
     }
 }
 
